--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "myproject-example",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
+  "proxy":"http://localhost:8080/",
   "dependencies": {
     "antd": "^3.19.8",
     "babel-plugin-import": "^1.13.0",
