--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "homepage": ".",
-  "proxy":"http://localhost:8080/",
+  "proxy": "http://localhost:8080/",
   "dependencies": {
     "antd": "^3.19.8",
+    "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.2.14",
     "react": "^16.12.0",
