--- a/package.json
+++ b/package.json
@@ -3,15 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "homepage": ".",
-<<<<<<< HEAD
-  "proxy":"http://localhost:8080/",
-=======
-  "proxy": "https://localhost:8080/",
->>>>>>> a868edbbe6959e978fc1a2d0499b8f35c03ca9c8
+  "proxy": "http://localhost:8080/",
   "dependencies": {
     "antd": "^3.19.8",
+    "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.2.14",
+    "fetch": "^1.1.0",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
